# everyday_my_arxiv

./: README.md  pyproject.toml  requirements.txt
.cursor/: PLAN_SKILL.md
.github/workflows/: daily_report.yml
config/: config.json  config_ark.json  keywords.json
scripts/: record_current_scoring.py  run_daily_report.py  scrape_test_papers.py
src/arxiv/: client.py
src/llm/: ark.py  base.py  factory.py  gemini.py  openai_client.py  openrouter_client.py
src/llm/prompts/: relevance_scoring.txt  summary.txt
src/utils/: ranking.py
tests/: __init__.py  test_llm_base.py  test_llm_factory.py  test_llm_gemini.py
